# iGuard

./: .gitignore  README.md
PoseDetect/: CMakeLists.txt  test.cc
combine/: CMakeLists.txt
combine/config/: combine.json  combine.test.json
combine/include/: combine.h
combine/src/: combine.cpp  main.cpp
guiclient/: .gitignore  log.md
guiclient/Assets/Pose/: switch.json  tighten.json
guiclient/Assets/Pose/driller/: drill.json  release.json  start.json  stop.json  tighten.json
guiclient/Assets/Pose/lathe/: autocut.json  back.json  check.json  clear.json  cut.json  front.json  ppe_all.json  ppe_glove.json  ppe_goggle.json  ppe_helmet.json  release.json  start.json  stop.json  tighten.json  tighten_knife.json  wrench.json
guiclient/Assets/Pose/ok/: ok.json
guiclient/Assets/Scenes/: SampleScene.unity
guiclient/Assets/met/: New Material.mat  danger.mat  danger2.mat  danger_red.mat  floor.mat  g1.mat  g2.mat  g3.mat  g4.mat  glovemet.mat  ok.mat
guiclient/Assets/model/: 1.FBX  glove.FBX
guiclient/Assets/prefab/: bone.prefab  btn1.prefab  dangerCube.prefab  dangerCylinder.prefab  node.prefab  pNode.prefab
guiclient/Assets/script/: Alert.cs  DangerCol.cs  LatheStatus.cs  OKMsg.cs  PPED.cs  Similarity.cs  Skeleton.cs  VideoPlay.cs
guiclient/ProjectSettings/: ProjectSettings.asset
handtrack/: .gitignore  README.md  calibrate.py  camera.py  hand.py  machine.py  main.py  realsense.hand.json  realsense2.json  realsense3.json  realsense3.test.json  send.py  visual.py
posedetect/: .gitignore  CMakeLists.txt  camera.cpp  camera.h  detector.cpp  detector.h  main.cpp  pose.cpp  pose.h  test.cpp  udpsender.cpp  udpsender.h
posedetect/bodysegment/: server.py
posedetect/calibrate/: CMakeLists.txt  config.json  main.cpp  solver.py
posedetect/include/: camera.h  udpsender.h
posedetect/nuitrack/: .gitignore  CMakeLists.txt  README.md  run.sh
posedetect/nuitrack/config/: kinect.json  kinect.main.json  kinect.minor.json  kinect0.json  kinect0.test.json  kinect1.json  kinect_new.json  nuitrack.config  realsense.json  realsense2.json
posedetect/nuitrack/include/: client.h  udpsender.h  utils.h
posedetect/nuitrack/src/: client.cpp  main.cpp  udpsender.cpp
posedetect/openpose/: CMakeLists.txt  README.md
posedetect/openpose/include/: camera.h  detector.h  pose.h
posedetect/openpose/src/: camera.cpp  detector.cpp  main.cpp  udpsender.cpp
posedetect/openpose/test/: udptest.cpp
posedetect/src/: camera.cpp  main.cpp  pose.cpp
posedetect/test/: node_info.json  udptest.cpp
posedetect/utils/: udpsender.cpp  udpsender.h
ppedetect/: augmentations.py  baidupic.py  config.py  demo.py  openvinoserver.py
ppedetect/model/: .gitignore
serial/: alarm.ino  serialctl.py
serial/alarm/: alarm.ino
similarity/: combine.py  config.py  convertonnx.py  convertxyz.R  infer.py  net.py  openvinoserver.py  preprocess.R  preprocess.py  record.py  reducefeature.py  selectmotion.py  send.py  server.py  train.py  utils.py
similarity/dataset/: .gitignore
similarity/dataset/meta/: basketball.json  climb.json  coil.json  cry.json  dance.json  hammer.json  jump.json  kick.json  laugh.json  run.json  screw.json  soccer.json  squat.json  stretch.json  sweep.json  swim.json  walk.json  wash.json  wave.json  wrench.json
similarity/dataset/raw/: mocap.html
